<resources>
    <string name="app_name">TruQartMerchant</string>
    <string name="dummy">dummy</string>
    <string name="dummynumber">25</string>
    <string name="ord_pend">Orders Pending</string>
    <string name="sent_items">Sent Items</string>
    <string name="delivered">Delivered</string>
    <string name="Prof_name">Praveen Attigeri</string>
    <string name="summary">Today\'s Summary :</string>
    <string name="processed">Processed</string>
    <string name="rupee">\u20B9</string>
    <string name="pending">Pending</string>
    <string name="products">Products</string>
    <string name="customer">Customers</string>
    <string name="transaction">Transactions</string>
    <string name="broadcast">Broadcasts</string>
    <string name="events">Events</string>
    <string name="reports">Reports</string>
    <string name="invite"><![CDATA[Invite & grow your network]]></string>
    <string name="wr_ur_msg">Write your message here</string>
    <string name="name">Praveen Attigeri</string>
    <string name="dummyphno">966XXXXXXX</string>
    <string name="we_have">We have</string>
    <string name="cust_connect">Customers Connected With Us</string>
    <string name="MyCustomers">My Customers</string>
    <string name="Profile_name">Profile Name</string>
    <string name="Profile_tagline">Profile Tag line</string>
    <string name="personal_info">Personal Information</string>
    <string name="shop_name">Shop Name</string>
    <string name="shop_add">Shop Address</string>
    <string name="shop_img">Shop Images</string>
    <string name="full_name">Full Name</string>
    <string name="bank_info">Bank Information</string>
    <string name="acc_no">4520XXXXXXXXXXXX</string>
    <string name="bank_name">Enter Bank Name</string>
    <string name="ifsc_code">Enter Bank IFSC Code</string>
    <string name="update_info">Update Info</string>
    <string name="send_msg_to">Send Message to</string>
    <string name="type_msg">Type your broadcast message here</string>
    <string name="item_name">Item Name</string>
    <string name="product_name">Enter Product Name</string>
    <string name="multi_line_desc">Enter Description</string>
    <string name="description">Description :</string>
    <string name="Price">Price</string>
    <string name="discount">Discounts</string>
    <string name="currency">INR</string>
    <string name="Avail_size">Available Sizes</string>
    <string name="colors">Colors</string>
    <string name="customer_rating">Overall Customer Ratings</string>
    <string name="Customer_Que">Customer Questions</string>
    <string name="event_name">Event Name </string>
    <string name="time_date">10 Dec 09:45</string>
    <string name="delete_product">Delete Product</string>
    <string name="update_product">Update Product</string>
    <string name="order_by">Ordered By</string>
    <string name="mark_completed">Mark Completed</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="status">Status :</string>
    <string name="in_process">In Process</string>
    <string name="dispacted">Dispatched</string>
    <string name="add_event">Add Event</string>
    <string name="add_event_title">Add a new event</string>
    <string name="event_add_image">Add Event Image</string>
    <string name="add_desc">Add Description</string>
    <string name="frm_dt"><![CDATA[From Date & Time]]></string>
    <string name="to_dt"><![CDATA[To Date & Time]]></string>
    <string name="add_loc">Add Location</string>
    <string name="show_report">Show report for</string>
    <string name="weekly_report">Weekly report</string>
    <string name="monthly_report">Monthly report</string>

    <string name="undo">UNDO</string>
    <string name="Delete">DELETE</string>
    <string name="add">Add</string>
    <string name="alphabet">ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="no_contacts">No Contacts</string>
    <string name="menu_search">Search</string>
    <string name="menu_add_contact">Add Contact</string>
    <string name="contacts_list_search_results_title">List</string>
    <string name="slt_dt">Start Date</string>
    <string name="slt_tm">Set Time</string>
    <string name="login_details">Enter your login details</string>
    <string name="mobile_no">Mobile Number</string>
    <string name="pwd">Password</string>
    <string name="login">Login</string>
    <string name="or">OR</string>
    <string name="reg">REGISTER NEW MERCHANT</string>
    <string name="create_ur_acc">Create your account</string>
    <string name="pls_fill_ur_rsp_dtls">Please your respective details</string>
    <string name="merchant_name">Merchant Name</string>
    <string name="email">Email Address</string>
    <string name="confirm_pwd">Confirm Password</string>

    <string name="conti">Continue</string>
    <string name="add_merchant">Add Merchant</string>
    <string name="work_info">work info</string>
    <string name="shop_info">Shopper Info</string>
    <string name="tag_line">Tell us what you provide</string>
    <string name="occu_type">Occupation Type</string>
    <string name="quest">\?</string>
    <string name="upload_exp">Upload your shop\'s photo\n this will be viewable to your clients into your profile</string>
    <string name="skip_now">Skip Now</string>
    <string name="for_trxn">For transaction support</string>
    <string name="name_as_bank">Name as per bank records</string>
    <string name="acc_no_txt">Account Number</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_product">Add Product</string>
    <string name="select_cat">Select Category</string>
    <string name="retailer">Retailers</string>
    <string name="offer">Offers</string>
    <string name="unit">Unit:</string>
    <string name="unit_desc">Enter unit  of product</string>
    <string name="retail_name">Retailer Name</string>
    <string name="name_shop">Shop Name</string>
    <string name="order_on">Ordered On</string>
    <string name="total">Total :</string>
    <string name="orderid">Order Id:</string>
    <string name="grand_total">Grand Total</string>
    <string name="pro_name">Product Name</string>
    <string name="pro_qty">Qty</string>
    <string name="pro_amt">Amount</string>
    <string name="units">Unit</string>
    <string name="add_offer_title">Add a new offer</string>
    <string name="event_offer_image">Add Image</string>
    <string name="offer_name">Offer Name</string>
    <string name="add_offer">Add offer</string>
    <string name="distributor_name">Distributor Name</string>
</resources>
