<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:textColor="@color/dim_gray_1"
        android:text="@string/pro_name"
        android:gravity="center"/>
    <View
        android:layout_width="1dp"
        android:layout_height="wrap_content"
        android:background="@color/ash_grey"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textColor="@color/dim_gray_1"
        android:text="@string/pro_qty"
        android:gravity="center"/>
    <View
        android:layout_width="1dp"
        android:layout_height="wrap_content"
        android:background="@color/ash_grey"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textColor="@color/dim_gray_1"
        android:text="@string/pro_amt"
        android:gravity="center"/>

</LinearLayout>
