<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:weightSum="1"
    android:paddingTop="@dimen/activity_horizontal_margin">


        <TextView
            android:id="@+id/pro_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:textColor="@color/dim_gray_1"
            android:text="@string/pro_name"
            android:gravity="center"
            />


        <TextView
            android:id="@+id/pro_qty"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:textColor="@color/dim_gray_1"
            android:text="@string/pro_qty"
            android:gravity="center"
            />


        <TextView
            android:id="@+id/pro_amount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:textColor="@color/dim_gray_1"
            android:text="@string/pro_amt"
            android:gravity="center"
            />


</LinearLayout>
