<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="85dp"
    >
<android.support.v7.widget.CardView
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/card_view"
    android:visibility="gone"
    android:layout_width="match_parent"
    android:layout_height="85dp"
    card_view:cardUseCompatPadding="true"
    card_view:contentPadding="2dp"
    card_view:cardCornerRadius="3dp"
    card_view:cardElevation="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

    <com.android.volley.toolbox.NetworkImageView
        android:id="@+id/event_card_img"
        android:layout_weight="0.3"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:src="@drawable/man_user"
        android:scaleType="centerCrop"/>
    <LinearLayout
        android:layout_weight="0.70"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">
        <TextView
            android:paddingLeft="@dimen/ten_margin"
            android:id="@+id/event_card_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/event_name"
            android:gravity="start|center"
            android:textSize="20sp"/>



        <TextView
            android:id="@+id/event_card_dt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/time_date"
            android:gravity="start|center"
            android:textSize="20sp"
            android:paddingLeft="@dimen/ten_margin"
            android:textColor="@color/deep_carrot_orange"/>
    </LinearLayout>

    </LinearLayout>




    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/undo"

        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/undo"
        android:textSize="20sp"
        android:layout_marginStart="50dp"
        android:padding="@dimen/five_space"
        android:gravity="center"
        android:layout_gravity="start|center_vertical"
        android:textColor="@color/white"
        android:layout_marginLeft="50dp" />

    <TextView

        android:id="@+id/cancel_btn"
        android:text="@string/Delete"
        android:padding="@dimen/activity_horizontal_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_gravity="end|center_vertical"
        android:textSize="20sp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"/>
</FrameLayout>