<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/show_report"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/show_report"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        app:layout_constraintTop_toTopOf="@+id/spinner"
        app:layout_constraintBottom_toBottomOf="@+id/spinner"
        app:layout_constraintRight_toLeftOf="@+id/spinner"/>

    <Spinner
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:id="@+id/spinner"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toRightOf="@+id/show_report"
        android:layout_marginLeft="8dp"
        android:background="@drawable/msg_backgroud"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.0" />

    <RadioGroup
        android:layout_width="0dp"
        android:layout_height="38dp"
        android:orientation="horizontal"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/spinner"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:gravity="center_horizontal"
        android:id="@+id/radioGroup">

        <RadioButton
            android:text="@string/weekly_report"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton4"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:textColor="@color/dim_gray_1"/>

        <RadioButton
            android:text="@string/monthly_report"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton5"
            android:layout_weight="1"
            android:textColor="@color/dim_gray_1"/>
    </RadioGroup>
    <com.github.mikephil.charting.charts.BarChart
        android:id="@+id/barchart"
        android:layout_width="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:layout_height="150dp">

    </com.github.mikephil.charting.charts.BarChart>
    <View
        android:layout_width="0dp"
        android:layout_height="4dp"
        android:background="@color/ash_grey"
        app:layout_constraintBottom_toTopOf="@+id/ll_tab"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteX="0dp" />
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="48dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/barchart"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:background="@color/off_white"
        android:id="@+id/ll_tab">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:textColor="@color/dim_gray_1"
            android:text="@string/pro_name"
            android:gravity="center"/>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/ash_grey"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/dim_gray_1"
            android:text="@string/pro_qty"
            android:gravity="center"/>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/ash_grey"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/dim_gray_1"
            android:text="@string/pro_amt"
            android:gravity="center"/>
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintBottom_toBottomOf="parent"/>


</android.support.constraint.ConstraintLayout>
