<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_transaction_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <android.support.v7.widget.Toolbar
        android:id="@+id/prod_detail_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Order Details"
            android:textColor="@android:color/white"
            android:textSize="@dimen/activity_horizontal_margin"/>

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingRight="@dimen/five_space"
        android:paddingLeft="@dimen/five_space"
        android:paddingTop="@dimen/five_space"
        android:layout_marginTop="@dimen/sixty"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/retail_name"
                />


            <TextView
                android:id="@+id/r_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/retail_name"
                android:layout_marginLeft="7dp"
                android:background="@drawable/msg_backgroud"
                android:textColor="@android:color/black"
                android:gravity="center_horizontal"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/five_space">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/orderid"
                android:maxLines="1"
                />

            <TextView
                android:id="@+id/o_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/orderid"
                android:background="@drawable/msg_backgroud"
                android:textColor="@android:color/black"
                android:gravity="center_horizontal"
                android:layout_marginLeft="45dp"
                />
        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/five_space"
            android:weightSum="1">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/order_on"

                />

            <TextView
                android:id="@+id/order_on"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/order_on"
                android:background="@drawable/msg_backgroud"
                android:layout_marginLeft="25dp"
                android:textColor="@android:color/black"
                android:gravity="center_horizontal"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/five_space">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/grand_total"
                android:maxLines="1"
                />

            <TextView
                android:id="@+id/total"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/grand_total"
                android:background="@drawable/msg_backgroud"
                android:maxLines="1"
                android:layout_marginLeft="24dp"
                android:textColor="@android:color/black"
                android:gravity="center_horizontal"
                android:layout_centerHorizontal="true"
                />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1"
            android:paddingTop="@dimen/activity_horizontal_margin"
            >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:textColor="@color/dim_gray_1"
                android:text="@string/pro_name"
                android:gravity="center"
                android:background="@color/ash_grey"/>


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:textColor="@color/dim_gray_1"
                android:text="@string/pro_qty"
                android:gravity="center"
                android:background="@color/ash_grey"/>


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:textColor="@color/dim_gray_1"
                android:text="@string/pro_amt"
                android:gravity="center"
                android:background="@color/ash_grey"/>

        </LinearLayout>


        <android.support.v7.widget.RecyclerView
            android:id="@+id/prod_rec"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/five_space">

        </android.support.v7.widget.RecyclerView>

    </LinearLayout>


</RelativeLayout>
