<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/workinfo_background"
    >



    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/briefcase"
        android:id="@+id/imageView6"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <TextView
        android:text="@string/shop_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/shop_info"
        app:layout_constraintRight_toLeftOf="@+id/imageView6"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:textColor="@color/white_smoke"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="1dp"
        app:layout_constraintTop_toTopOf="@+id/imageView6" />

    <TextView
        android:text="@string/tag_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tag_line"
        app:layout_constraintRight_toRightOf="@+id/shop_info"
        app:layout_constraintTop_toBottomOf="@+id/shop_info"
        android:textSize="12sp"
        android:textColor="@color/dark_gray"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintRight_creator="1"
        android:layout_marginRight="16dp"
        android:background="@color/white"
        android:weightSum="1"

        app:layout_constraintBottom_creator="1"
        android:id="@+id/shop_lay"
        app:layout_constraintHorizontal_bias="1.0"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/tag_line"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintLeft_creator="1">
        <ImageView
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="0.2"
            android:layout_gravity="center_vertical"
            android:src="@drawable/shop"/>
        <EditText
            android:id="@+id/mrcht_shop"
            android:layout_weight="0.8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_gravity="bottom"
            android:hint="@string/shop_name"
            android:textSize="14sp">
        </EditText>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintRight_creator="1"
        android:layout_marginRight="16dp"
        android:background="@color/white"
        android:weightSum="1"

        app:layout_constraintBottom_creator="1"
        android:id="@+id/shop_add_lay"
        app:layout_constraintHorizontal_bias="1.0"

        app:layout_constraintTop_toBottomOf="@+id/shop_lay"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintLeft_creator="1">
        <ImageView
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="0.2"
            android:layout_gravity="center_vertical"
            android:src="@drawable/address"/>
        <EditText
            android:id="@+id/mrcht_add"
            android:layout_weight="0.8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_gravity="bottom"
            android:hint="@string/shop_add"
            android:textSize="14sp">
        </EditText>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintRight_creator="1"
        android:layout_marginRight="16dp"
        android:background="@color/white"
        android:weightSum="1"

        app:layout_constraintBottom_creator="1"
        android:id="@+id/occupation_lay"
        app:layout_constraintHorizontal_bias="1.0"

        app:layout_constraintTop_toBottomOf="@+id/shop_add_lay"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintLeft_creator="1">
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="0.2"
            android:layout_gravity="center_vertical"
            android:text="@string/quest"
            android:gravity="center"
            android:textColor="@android:color/black"/>
        <EditText
            android:id="@+id/mrcht_occ_type"
            android:layout_weight="0.8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_gravity="bottom"
            android:hint="@string/occu_type"
            android:textSize="14sp">
        </EditText>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintRight_creator="1"
        android:layout_marginRight="16dp"
        android:background="@color/white"
        android:weightSum="1"

        app:layout_constraintBottom_creator="1"
        android:id="@+id/ta"
        app:layout_constraintHorizontal_bias="1.0"

        app:layout_constraintTop_toBottomOf="@+id/occupation_lay"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintLeft_creator="1">

        <TextView
            android:paddingLeft="@dimen/ten_margin"
            android:paddingRight="@dimen/ten_margin"
            android:id="@+id/exp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAlignment="viewEnd"
            android:layout_gravity="end"
            android:textSize="12sp"
            android:hint="@string/upload_exp"
            android:maxLines="2">
        </TextView>
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:orientation="horizontal"
        android:layout_width="0dp"
        android:layout_marginStart="16dp"
        android:padding="@dimen/ten_margin"
        app:layout_constraintTop_toBottomOf="@+id/ta"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:layout_height="100dp"
        android:background="@color/white"
        android:id="@+id/shop_image_rv"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintLeft_creator="1" />

    <TextView
        android:text="@string/conti"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/conti"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/shop_image_rv"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/continue_btn"
        android:textColor="@color/white"
        android:padding="@dimen/ten_margin"
        android:gravity="center"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintLeft_creator="1" />

    <TextView
        android:text="@string/skip_now"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/conti"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textColor="@color/deep_carrot_orange"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintLeft_creator="1" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/tclogo"
        android:id="@+id/imageView5"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:text="@string/work_info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/add_merchant"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textColor="@color/faded_white"
        android:textSize="@dimen/banner_name"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />
</android.support.constraint.ConstraintLayout>
